2002-11-01 Damien Sandras  <dsandras@seconix.com>

	* src/chat_window.cpp: Fixed conversion to UTF-8.

	* src/cleaner.cpp: Changed the way GM exits.

	* src/connection.cpp: Fixed conversion to UTF-8.

	* src/endpoint.cpp: Fixed conversion to UTF-8.

	* src/ils.cpp: Fixed bad IP when GM registers to ILS.

	* src/main_window.cpp: Changed startup sequence.

	* src/misc.cpp: Adapated PAssertFunc to the new API.
	Added again conversion from ISO-8859-1 to UTF-8.
	
	* src/misc.h: Added again conversion from ISO-8859-1 to UTF-8.

	* src/pref_window.cpp: Fixed conversion to UTF-8.
	
2002-10-30 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Get back to 0.94.2.
	
2002-10-30 Damien Sandras  <dsandras@seconix.com>

	* src/misc.cpp: Fixed bug again.
		
	* src/pref_window.cpp: Again.

2002-10-30 Damien Sandras  <dsandras@seconix.com>

	* src/misc.cpp: Fixed bug.
	
2002-10-30 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Detects if remote is a new GnomeMeeting or not.
	If not, use ISO-8859-1.

	* src/main_window.cpp: Prevents ESD to spawn.
	
2002-10-30 Damien Sandras  <dsandras@seconix.com>

	* src/chat_window.cpp: Fixed bugs.

	* src/endpoint.cpp: Fixed bugs.

	* src/misc.cpp: Fixed bugs.

2002-10-30 Damien Sandras  <dsandras@seconix.com>

	* src/chat_window.cpp: Make use of the new misc.h function.

	* src/connection.cpp: Make use of the new misc.h function.

	* src/endpoint.cpp: Make use of the new misc.h function.

	* src/ils.cpp: If the ILS server doesn't send valid UTF-8, then we
	know it is Netmeeting or old GnomeMeeting, and we convert from
	ISO-8859-1.

	* src/misc.cpp: Added new function to cut PString's 
	after the "[" or "(".

	* src/misc.h: Added new function to cut PString's after the "[" or "(".
	
2002-10-30 Damien Sandras  <dsandras@seconix.com>

	* src/chat_window.cpp: Fixed conversion. If conversion fails, then
	fallback to ISO-8859-1.
	* src/connection.cpp: Same.
	* src/endpoint.cpp: Same.
	* src/ils.cpp: Same.