@@ -1,5 +1,17 @@
 2002-11-01 Damien Sandras  <dsandras@seconix.com>
 
+	* src/cleaner.cpp: Changed the exit sequence.
+
+	* src/config.cpp: Code cleanup.
+	
+	* src/endpoint.cpp: Changed destructor.
+	
+	* src/gnomemeeting.cpp: Changed destructor.
+
+	* src/main_window.cpp: Added timeout ID to GM.
+
+2002-11-01 Damien Sandras  <dsandras@seconix.com>
+
 	* src/chat_window.cpp: Fixed conversion to UTF-8.
 
 	* src/cleaner.cpp: Changed the way GM exits.
